# template-cpp-conan-qt6

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
include/: mainwindow.hpp
src/: CMakeLists.txt  main.cpp  mainwindow.cpp
